# game-of-life

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  clippy.toml  index.css  index.html  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
src/: assets.rs  camera.rs  color_gradient.rs  config.rs  game.rs  input.rs  main.rs  ui.rs
src/input/: mod.rs
src/ui/: mod.rs  widgets.rs
src/ui/widgets/: toggle.rs
web/: index.html
