[package]
name = "game-of-life"
version = "0.1.6"
edition = "2021"
description = "Conway's Game of Life in Bevy."
authors = ["Martin Green"]
keywords = ["game", "bevy"]
categories = ["games"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.11"
default-features = false

# <https://github.com/bevyengine/bevy/blob/v0.11.3/docs/cargo_features.md>
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi-threaded",
    "png",
    "subpixel_glyph_atlas",
    "webgl2",
]

# <https://github.com/rust-lang/cargo/issues/1197#issuecomment-1641086954>
#[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
#version = "0.12"
#default-features = false
#features = ["dynamic_linking"]

[dependencies]
bevy_pixel_camera = "0.5.1"
bevy_framepace = "0.13.3"

console_error_panic_hook = "0.1"
ordered-float = "4.1.0"
priority-queue = "1.3.2"
ahash = "0.8.4"
once_cell = "1.18.0"
bevy_egui = { version = "0.22.0", default-features = false, features = ["default_fonts"] }
egui_extras = "0.23.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
