[package]
name = "game-of-life"
version = "0.1.7"
edition = "2021"
description = "Conway's Game of Life in Bevy."
authors = ["Martin Green"]
keywords = ["game", "bevy"]
categories = ["games"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.14.1"
default-features = false

# <https://github.com/bevyengine/bevy/blob/v0.14.1/docs/cargo_features.md>
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "subpixel_glyph_atlas",
    "webgl2",
]

# <https://github.com/rust-lang/cargo/issues/1197#issuecomment-1641086954>
#[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
#version = "0.11"
#default-features = false
#features = ["dynamic_linking"]

[dependencies]
#bevy_pixel_camera = "0.13.0"
bevy_pixel_camera = { git = "https://github.com/drakmaniso/bevy_pixel_camera", rev = "refs/pull/37/head" }
bevy_framepace = "0.17.1"

console_error_panic_hook = "0.1"
ordered-float = "4.1.0"
priority-queue = "2.0.3"
ahash = "0.8.4"
bevy_egui = { version = "0.28.0", default-features = false, features = ["default_fonts", "render"] }
egui_extras = "0.28.1"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

#
# The default 'release' profile is optimized for Wasm builds because that's what
# Trunk [currently reads](https://github.com/trunk-rs/trunk/issues/605).
#

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release-native]
inherits = "release"
opt-level = 3
strip = "none"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "deny"

[lints.clippy]
disallowed_types = "deny"
missing_enforced_import_renames = "deny"

pedantic = "warn"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
